make it works w/ es5

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "e2e": "ng e2e",
     "build": "ng build --prod --output-hashing=none",
     "package-es5": "cat ./dist/elements-demo/runtime-es5.js ./dist/elements-demo/polyfills-es5.js ./dist/elements-demo/scripts.js ./dist/elements-demo/main-es5.js > src/custom-button-element.js",
+    "package-es5-with-tslint-set-target-es5": "cat ./dist/elements-demo/runtime.js ./dist/elements-demo/polyfills.js ./dist/elements-demo/scripts.js ./dist/elements-demo/main.js > src/custom-button-element.js",
     "package-es2015": "cat ./dist/elements-demo/runtime-es2015.js ./dist/elements-demo/polyfills-es2015.js ./dist/elements-demo/scripts.js ./dist/elements-demo/main-es2015.js > src/custom-button-element.js",
-    "button-es5": "npm run build && npm run package-es5",
+    "button-es5": "npm run build && npm run package-es5-with-tslint-set-target-es5",
     "button-es2015": "npm run build && npm run package-es2015"
   },
   "private": true,
@@ -27,7 +28,7 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-    "document-register-element": "^1.7.2"
+    "document-register-element": "1.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.20",
