--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build": "ng build --prod --output-hashing=none",
+    "build": "ng build --configuration es5 ",
     "package-es5": "cat ./dist/elements-demo/runtime-es5.js ./dist/elements-demo/polyfills-es5.js ./dist/elements-demo/scripts.js ./dist/elements-demo/main-es5.js > src/custom-button-element.js",
     "package-es5-with-tslint-set-target-es5": "cat ./dist/elements-demo/runtime.js ./dist/elements-demo/polyfills.js ./dist/elements-demo/scripts.js ./dist/elements-demo/main.js > src/custom-button-element.js",
     "package-es2015": "cat ./dist/elements-demo/runtime-es2015.js ./dist/elements-demo/polyfills-es2015.js ./dist/elements-demo/scripts.js ./dist/elements-demo/main-es2015.js > src/custom-button-element.js",
